buildscript {
	ext {
//		springBootVersion = '2.1.0.RELEASE'
		springBootVersion = '3.0.0.RELEASE'
	}
	repositories {
		mavenCentral()
		maven { url "https://repo.spring.io/snapshot" }
		maven { url "https://repo.spring.io/milestone" }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}


plugins {
	id 'java'
//	id 'org.springframework.boot'
//	id 'io.spring.dependency-management'
	id 'org.springframework.boot' version '3.0.0'
//	id 'io.spring.dependency-management' version '1.1.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'

	id 'jacoco'
	id 'maven-publish'
}

group = 'guru.springframework'
version = '0.0.1-SNAPSHOT'



java {
	sourceCompatibility = '17'
//	sourceCompatibility = '1.8'
//	targetCompatability = '1.8'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/snapshot" }
	maven { url "https://repo.spring.io/milestone" }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly'org.springframework.boot:spring-boot-devtools'
//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
//	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.5.2'
//	implementation group:'de.flapdoodle.embed', name:'de.flapdoodle.embed.mongo', version:"4.6.1"
	implementation 'org.webjars:bootstrap:3.3.7-1'
	implementation 'org.webjars:jquery:3.7.1'

//	implementation 'org.slf4j:slf4j-api:1.6.1'
	// SLF4J API
	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
	// SLF4J Log4j Implementation
//	implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '2.0.9'

	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
	implementation 'javax.servlet:javax.servlet-api:4.0.0'
	compileOnly 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'junit:junit:4.13.1'
	annotationProcessor 'org.projectlombok:lombok'

//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
//	implementation 'org.springframework.boot:spring-boot-gradle-plugin:3.1.2' *
// 	implementation 'mysql:mysql-connector-java:8.0.28'

}

//test {
//	finalizedBy jacocoTestReport
//}
//
//jacocoTestReport {
//	dependsOn test
//}

tasks.withType(Test).configureEach {
	jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
}


//export test coverage
jacocoTestReport {
	reports {
		xml.required = true   // There is a problem right here
		csv.required = false
		html.required = false
	}
}





